[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "baloot"
version = "0.0.20"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "Helper functions to increase efficiency."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
keywords = ["helpers", "efficient", "easy"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/baloot", Repository="https://github.com/tahashieenavaz/baloot", Documentation="https://github.com/tahashieenavaz/baloot#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
baloot = ["*.md", "*.txt"]
