[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "baloot"
description = "Helper functions to increase efficiency."
authors = [{ name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" }]
urls = { Homepage="https://github.com/tahashieenavaz/baloot" }
keywords = ["helpers", "efficient", "easy"]
dependencies = []

dynamic = ["version"] 
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[tool.setuptools_scm] 

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]